<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mymusic.MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pageBackground"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card1_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardElevation="2dp">

            <TextView
                android:id="@+id/intro1_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/intro_songs_list"
                android:textSize="12sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_artist1"
            style="@style/styleCardSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/artist1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/styleTextArtist"
                    android:layout_marginTop="8dp"
                    android:text="@string/artist1" />

                <TextView
                    style="@style/styleTextAlbum"
                    android:text="@string/album1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/play_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/play_all"
                        android:textColor="#673AB7" />

                    <Button
                        android:id="@+id/discover_similar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/discover_similar"
                        android:textColor="#673AB7" />

                </LinearLayout>

                <TextView
                    android:id="@+id/track1"
                    style="@style/styleTrackText"
                    android:text="@string/track1" />

                <TextView
                    android:id="@+id/track2"
                    style="@style/styleTrackText"
                    android:text="@string/track2" />

                <TextView
                    android:id="@+id/track3"
                    style="@style/styleTrackText"
                    android:text="@string/track3" />

                <TextView
                    android:id="@+id/track4"
                    style="@style/styleTrackText"
                    android:text="@string/track4" />

                <TextView
                    android:id="@+id/track5"
                    style="@style/styleTrackText"
                    android:text="@string/track5" />

                <TextView
                    android:id="@+id/track6"
                    style="@style/styleTrackText"
                    android:text="@string/track6" />

                <TextView
                    android:id="@+id/track7"
                    style="@style/styleTrackText"
                    android:text="@string/track7" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
